# opcuacpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  client_simple.cpp  server_simple.cpp
include/open62541cpp/: open62541_c_client.hpp  open62541_c_server.hpp
include/open62541cpp/common/exception/: exceptions_core.hpp  exceptions_extended.hpp
include/open62541cpp/net/client/: client.hpp  client_exceptions.hpp
include/open62541cpp/net/server/: server.hpp  server_exceptions.hpp
include/open62541cpp/types/: primitive_types.hpp  types.hpp  ua_node_id.hpp  ua_node_id.ipp  ua_qualified_name.hpp
include/open62541cpp/util/: console_logger.hpp  logger.hpp
src/: CMakeLists.txt
src/common/exception/: CMakeLists.txt  exceptions_extended.cpp
src/net/client/: CMakeLists.txt  client.cpp  client_exceptions.hpp
src/net/server/: CMakeLists.txt  server.cpp
src/types/: CMakeLists.txt  ua_node_id.cpp  ua_qualified_name.cpp
src/util/: CMakeLists.txt  console_logger.cpp  logger.cpp
tests/: CMakeLists.txt  test_main.cc
tests/client/: CMakeLists.txt  client_test.cpp
tests/exception/: CMakeLists.txt  exception_test.cpp
tests/server/: CMakeLists.txt  server_test.cpp
tests/types/: CMakeLists.txt  ua_node_id_test.cpp  ua_qualified_name_test.cpp
