set (OPCUACPP_CLIENT_LIB_SUFFIX "util")
set (OPCUACPP_CLIENT_LIB_NAME  "opcuacpp_${OPCUACPP_CLIENT_LIB_SUFFIX}")

set (OPCUACPP_CLIENT_INCLUDE_DIR "${OPCUACPP_INCLUDE_DIR}/open62541cpp/util")

message(WARNING OPCUACPP_INCLUDE_DIR => ${OPCUACPP_INCLUDE_DIR})
message(WARNING OPCUACPP_CLIENT_INCLUDE_DIR => ${OPCUACPP_CLIENT_INCLUDE_DIR})

add_library(${OPCUACPP_CLIENT_LIB_NAME})

target_sources(${OPCUACPP_CLIENT_LIB_NAME}
    PRIVATE
    ${OPCUACPP_CLIENT_INCLUDE_DIR}/logger.hpp
    ${OPCUACPP_CLIENT_INCLUDE_DIR}/console_logger.hpp
)

target_sources(${OPCUACPP_CLIENT_LIB_NAME}
    PRIVATE
    ${CMAKE_CURRENT_SRC_DIR}logger.cpp
    ${CMAKE_CURRENT_SRC_DIR}console_logger.cpp
)

target_include_directories(${OPCUACPP_CLIENT_LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR})

add_library(${PROJECT_SHORTNAME}::${OPCUACPP_CLIENT_LIB_SUFFIX} ALIAS ${OPCUACPP_CLIENT_LIB_NAME})
target_link_libraries(${OPCUACPP_CLIENT_LIB_NAME} open62541::open62541 )