set (OPCUACPP_SERVER_LIB_SUFFIX "server")
set (OPCUACPP_SERVER_LIB_NAME  "opcuacpp_${OPCUACPP_SERVER_LIB_SUFFIX}")

set (OPCUACPP_SERVER_INCLUDE_DIR "${OPCUACPP_INCLUDE_DIR}/open62541cpp/net/server")

add_library(${OPCUACPP_SERVER_LIB_NAME})

target_sources(${OPCUACPP_SERVER_LIB_NAME}
    PRIVATE
    ${OPCUACPP_SERVER_INCLUDE_DIR}/server.hpp
    ${OPCUACPP_SERVER_INCLUDE_DIR}/server_exceptions.hpp
)

target_sources(${OPCUACPP_SERVER_LIB_NAME}
    PRIVATE
    ${CMAKE_CURRENT_SRC_DIR}server.cpp
)

target_include_directories(${OPCUACPP_SERVER_LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR})

add_library(${PROJECT_SHORTNAME}::${OPCUACPP_SERVER_LIB_SUFFIX} ALIAS ${OPCUACPP_SERVER_LIB_NAME})
target_link_libraries(${OPCUACPP_SERVER_LIB_NAME} open62541::open62541 open62541cpp::util open62541cpp::exception)